--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -140,10 +140,10 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h3>MC PiliPili</h3>
+                            <h3>MC Njozi</h3>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at quod
-                                odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous
+                                moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <button class="btn-cart">Select</button>
@@ -159,8 +159,8 @@
                         <div class="card-body">
                             <h3>MC Kwetu</h3>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at quod
-                                odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous
+                                moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <button class="btn-cart">Select</button>
@@ -176,8 +176,8 @@
                         <div class="card-body">
                             <h3>MC Maeda</h3>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at quod
-                                odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous
+                                moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <button class="btn-cart">Select</button>
@@ -198,13 +198,10 @@
                         <img src="assets/img/hero/hero1.svg" alt="" class="img-fluid">
                     </div>
                     <div class="col col-text">
+                        <h3 class="better-text">We make it</h3>
                         <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est mollitia id porro aspernatur
-                            aperiam, fuga earum officiis. Dolorum, ex magnam! Exercitationem corrupti magnam saepe,
-                            veritatis excepturi nihil maiores sint beatae?
-                            Iste quisquam tempora itaque! Non odit veritatis soluta, maxime saepe, facere quod
-                            recusandae consequatur explicabo fuga, tenetur necessitatibus pariatur obcaecati dolores
-                            reiciendis sint ut autem. Reiciendis reprehenderit quasi nam impedit.
+                            Plan your ceremony, function and event the better way with us as we keep track of the
+                            available masters of ceremony per a particular moments you make an appointment.
                         </p>
                         <a href="#" class="btn btn-primary">Read More</a>
                     </div>
@@ -220,13 +217,10 @@
 
                 <div class="row flex even-columns py-5">
                     <div class="col col-text">
+                        <h3 class="you-text">We do it</h3>
                         <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est mollitia id porro aspernatur
-                            aperiam, fuga earum officiis. Dolorum, ex magnam! Exercitationem corrupti magnam saepe,
-                            veritatis excepturi nihil maiores sint beatae?
-                            Iste quisquam tempora itaque! Non odit veritatis soluta, maxime saepe, facere quod
-                            recusandae consequatur explicabo fuga, tenetur necessitatibus pariatur obcaecati dolores
-                            reiciendis sint ut autem. Reiciendis reprehenderit quasi nam impedit.
+                            Plan your ceremony, function and event the better way with us as we keep track of the
+                            available masters of ceremony per a particular moments you make an appointment.
                         </p>
                         <a href="#" class="btn btn-primary">Read More</a>
                     </div>
@@ -248,13 +242,10 @@
                         <img src="assets/img/hero/hero10.svg" alt="" class="img-fluid">
                     </div>
                     <div class="col col-text">
+                        <h3 class="schedule-text">Let's schedule it</h3>
                         <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est mollitia id porro aspernatur
-                            aperiam, fuga earum officiis. Dolorum, ex magnam! Exercitationem corrupti magnam saepe,
-                            veritatis excepturi nihil maiores sint beatae?
-                            Iste quisquam tempora itaque! Non odit veritatis soluta, maxime saepe, facere quod
-                            recusandae consequatur explicabo fuga, tenetur necessitatibus pariatur obcaecati dolores
-                            reiciendis sint ut autem. Reiciendis reprehenderit quasi nam impedit.
+                            Plan your ceremony, function and event the better way with us as we keep track of the
+                            available masters of ceremony per a particular moments you make an appointment.
                         </p>
                         <a href="#" class="btn btn-primary">Read More</a>
                     </div>
@@ -292,7 +283,9 @@
                                 <div class="addr">
                                     <h3>Address</h3>
                                     <p>
-                                        Box 261 Kinondoni, Dar es salaam, Tanzania
+                                        Box 261 Kinondoni,
+                                        <br>
+                                        Dar es salaam, Tanzania
                                     </p>
                                 </div>
                             </div>
@@ -302,15 +295,17 @@
                                     <h3>Email</h3>
                                     <p>
                                         info@celebrate.co.tz
+                                        <br>
+                                        celebrate@gmail.com
                                     </p>
                                 </div>
                             </div>
                             <div class="addr-wrap">
-                                <i class="fas fa-phone-alt"></i>
+                                <i class="fas fa-globe"></i>
                                 <div class="addr">
                                     <h3>Website</h3>
                                     <p>
-                                        https://www.celebrate.co.tz
+                                        www.celebrate.co.tz
                                     </p>
                                 </div>
                             </div>
@@ -320,7 +315,8 @@
                                     <h3>Call</h3>
                                     <p>
                                         +255 686 389 908
-                                        <!-- +255 716 491 716 -->
+                                        <br>
+                                        +255 716 491 716
                                     </p>
                                 </div>
                             </div>
