--- a/celebrate/pages/book_mc.html
+++ b/celebrate/pages/book_mc.html
@@ -91,10 +91,9 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h3>MC PiliPili</h3>
+                            <h3>MC Njozi</h3>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at quod
-                                odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <button class="btn-cart">Select</button>
@@ -110,8 +109,7 @@
                         <div class="card-body">
                             <h3>MC Kwetu</h3>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at quod
-                                odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <button class="btn-cart">Select</button>
@@ -127,8 +125,7 @@
                         <div class="card-body">
                             <h3>MC Maeda</h3>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at quod
-                                odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <button class="btn-cart">Select</button>
@@ -144,10 +141,9 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h3>MC PiliPili</h3>
+                            <h3>MC Njozi</h3>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at quod
-                                odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <button class="btn-cart">Select</button>
@@ -163,8 +159,7 @@
                         <div class="card-body">
                             <h3>MC Kwetu</h3>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at quod
-                                odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <button class="btn-cart">Select</button>
@@ -180,8 +175,7 @@
                         <div class="card-body">
                             <h3>MC Maeda</h3>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at quod
-                                odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <button class="btn-cart">Select</button>
@@ -197,10 +191,9 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h3>MC PiliPili</h3>
+                            <h3>MC Njozi</h3>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at quod
-                                odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <button class="btn-cart">Select</button>
@@ -216,8 +209,7 @@
                         <div class="card-body">
                             <h3>MC Kwetu</h3>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at quod
-                                odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <button class="btn-cart">Select</button>
@@ -233,8 +225,7 @@
                         <div class="card-body">
                             <h3>MC Maeda</h3>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at quod
-                                odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <button class="btn-cart">Select</button>
