--- a/celebrate/pages/contact.html
+++ b/celebrate/pages/contact.html
@@ -109,7 +109,9 @@
                                 <div class="addr">
                                     <h3>Address</h3>
                                     <p>
-                                        Box 261 Kinondoni, Dar es salaam, Tanzania
+                                        Box 261 Kinondoni,
+                                        <br>
+                                        Dar es salaam, Tanzania
                                     </p>
                                 </div>
                             </div>
@@ -118,8 +120,18 @@
                                 <div class="addr">
                                     <h3>Email</h3>
                                     <p>
-                                        prospermbuma@gmail.com
-                                        mbumaprosper@hotmail.com
+                                        info@celebrate.co.tz
+                                        <br>
+                                        celebrate@gmail.com
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="addr-wrap">
+                                <i class="fas fa-globe"></i>
+                                <div class="addr">
+                                    <h3>Website</h3>
+                                    <p>
+                                        www.celebrate.co.tz
                                     </p>
                                 </div>
                             </div>
@@ -129,6 +141,7 @@
                                     <h3>Call</h3>
                                     <p>
                                         +255 686 389 908
+                                        <br>
                                         +255 716 491 716
                                     </p>
                                 </div>
