Have added shopping cart on mybookings.html

--- a/celebrate/pages/mybookings.html
+++ b/celebrate/pages/mybookings.html
@@ -100,6 +100,75 @@
                         <p>There are no appointments yet. Press the "Book Now" button to make appointment.</p>
                     </div>
                 </div>
+                <div class="row flex even-columns pt-0 pb-3">
+                    <div class="bookings-table">
+                        <div class="card">
+                            <table>
+                                <tr id="t-header">
+                                    <th id="moc">MC's Image</th>
+                                    <th id="moc">MC's Name</th>
+                                    <th id="moc">Booking</th>
+                                    <th id="booking-price">Booking Unit Price</th>
+                                    <th id="total">Total</th>
+                                </tr>
+                                <tr>
+                                    <td><img src="../assets/img/mc/mc1.jpg" alt="" class="mc-img"></td>
+                                    <td>
+                                        <h5>
+                                            Mc Kwetu
+                                        </h5>
+                                    </td>
+                                    <td>
+                                        <div class="booking-btns">
+                                            <button class="btn btn-gray btn-update" title="update"><i
+                                                    class="fas fa-recycle"></i></button>
+                                            <button class="btn btn-danger btn-remove" title="remove"><i
+                                                    class="fas fa-times-circle"></i></button>
+                                        </div>
+                                    </td>
+                                    <td>TZS 3,500,000</td>
+                                    <td>TZS 3,500,000</td>
+                                </tr>
+                                <tr>
+                                    <td><img src="../assets/img/mc/mc2.jpg" alt="" class="mc-img"></td>
+                                    <td>
+                                        <h5>
+                                            Mc Maeda
+                                        </h5>
+                                    </td>
+                                    <td>
+                                        <div class="booking-btns">
+                                            <button class="btn btn-gray btn-update" title="update"><i
+                                                    class="fas fa-recycle"></i></button>
+                                            <button class="btn btn-danger btn-remove" title="remove"><i
+                                                    class="fas fa-times-circle"></i></button>
+                                        </div>
+                                    </td>
+                                    <td>TZS 1,500,000</td>
+                                    <td>TZS 1,500,000</td>
+                                </tr>
+                                <tr>
+                                    <td><img src="../assets/img/mc/mc4.jpg" alt="" class="mc-img"></td>
+                                    <td>
+                                        <h5>
+                                            Mc Njozi
+                                        </h5>
+                                    </td>
+                                    <td>
+                                        <div class="booking-btns">
+                                            <button class="btn btn-gray btn-update" title="update"><i
+                                                    class="fas fa-recycle"></i></button>
+                                            <button class="btn btn-danger btn-remove" title="remove"><i
+                                                    class="fas fa-times-circle"></i></button>
+                                        </div>
+                                    </td>
+                                    <td>TZS 2,500,000</td>
+                                    <td>TZS 2,500,000</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- End Bookings -->
