Edited the Booking column into Booking Options

--- a/celebrate/pages/mybookings.html
+++ b/celebrate/pages/mybookings.html
@@ -107,7 +107,7 @@
                                 <tr id="t-header">
                                     <th id="moc">MC's Image</th>
                                     <th id="moc">MC's Name</th>
-                                    <th id="moc">Booking</th>
+                                    <th id="moc">Booking Options</th>
                                     <th id="booking-price">Booking Unit Price</th>
                                     <th id="total">Total</th>
                                 </tr>
