--- a/celebrate/pages/mybookings.html
+++ b/celebrate/pages/mybookings.html
@@ -95,78 +95,110 @@
                         </a>
                     </div>
                 </div>
-                <div class="row flex even-columns pt-0 pb-3">
+                <div class="row flex even-columns pt-0 pb-0 booking-not-found">
                     <div class="bookings-content">
                         <p>There are no appointments yet. Press the "Book Now" button to make appointment.</p>
                     </div>
                 </div>
-                <div class="row flex even-columns pt-0 pb-3">
+                <div class="row flex even-columns pt-0 pb-0 bookings-row">
                     <div class="bookings-table">
-                        <div class="card">
-                            <table>
-                                <tr id="t-header">
-                                    <th id="moc">MC's Image</th>
-                                    <th id="moc">MC's Name</th>
-                                    <th id="moc">Booking Options</th>
-                                    <th id="booking-price">Booking Unit Price</th>
-                                    <th id="total">Total</th>
-                                </tr>
-                                <tr>
-                                    <td><img src="../assets/img/mc/mc1.jpg" alt="" class="mc-img"></td>
-                                    <td>
-                                        <h5>
-                                            Mc Kwetu
-                                        </h5>
-                                    </td>
-                                    <td>
-                                        <div class="booking-btns">
-                                            <button class="btn btn-gray btn-update" title="update"><i
-                                                    class="fas fa-recycle"></i></button>
-                                            <button class="btn btn-danger btn-remove" title="remove"><i
-                                                    class="fas fa-times-circle"></i></button>
-                                        </div>
-                                    </td>
-                                    <td>TZS 3,500,000</td>
-                                    <td>TZS 3,500,000</td>
-                                </tr>
-                                <tr>
-                                    <td><img src="../assets/img/mc/mc2.jpg" alt="" class="mc-img"></td>
-                                    <td>
-                                        <h5>
-                                            Mc Maeda
-                                        </h5>
-                                    </td>
-                                    <td>
-                                        <div class="booking-btns">
-                                            <button class="btn btn-gray btn-update" title="update"><i
-                                                    class="fas fa-recycle"></i></button>
-                                            <button class="btn btn-danger btn-remove" title="remove"><i
-                                                    class="fas fa-times-circle"></i></button>
-                                        </div>
-                                    </td>
-                                    <td>TZS 1,500,000</td>
-                                    <td>TZS 1,500,000</td>
-                                </tr>
-                                <tr>
-                                    <td><img src="../assets/img/mc/mc4.jpg" alt="" class="mc-img"></td>
-                                    <td>
-                                        <h5>
-                                            Mc Njozi
-                                        </h5>
-                                    </td>
-                                    <td>
-                                        <div class="booking-btns">
-                                            <button class="btn btn-gray btn-update" title="update"><i
-                                                    class="fas fa-recycle"></i></button>
-                                            <button class="btn btn-danger btn-remove" title="remove"><i
-                                                    class="fas fa-times-circle"></i></button>
-                                        </div>
-                                    </td>
-                                    <td>TZS 2,500,000</td>
-                                    <td>TZS 2,500,000</td>
-                                </tr>
-                            </table>
-                        </div>
+                        <!-- <div class="card"> -->
+                        <table>
+                            <tr id="t-header">
+                                <th id="moc">MC's Image</th>
+                                <th id="moc">MC's Name</th>
+                                <th id="moc">Booking Options</th>
+                                <th id="booking-price">Booking Unit Price</th>
+                                <th id="total">Total</th>
+                            </tr>
+                            <tr>
+                                <td><img src="../assets/img/mc/mc1.jpg" alt="" class="mc-img"></td>
+                                <td>
+                                    <h5>
+                                        Mc Kwetu
+                                    </h5>
+                                </td>
+                                <td>
+                                    <div class="booking-btns">
+                                        <button class="btn btn-gray btn-update" title="update"><i
+                                                class="fas fa-recycle"></i></button>
+                                        <button class="btn btn-danger btn-remove" title="remove"><i
+                                                class="fas fa-times-circle"></i></button>
+                                    </div>
+                                </td>
+                                <td>TZS 3,500,000</td>
+                                <td>TZS 3,500,000</td>
+                            </tr>
+                            <tr>
+                                <td><img src="../assets/img/mc/mc2.jpg" alt="" class="mc-img"></td>
+                                <td>
+                                    <h5>
+                                        Mc Maeda
+                                    </h5>
+                                </td>
+                                <td>
+                                    <div class="booking-btns">
+                                        <button class="btn btn-gray btn-update" title="update"><i
+                                                class="fas fa-recycle"></i></button>
+                                        <button class="btn btn-danger btn-remove" title="remove"><i
+                                                class="fas fa-times-circle"></i></button>
+                                    </div>
+                                </td>
+                                <td>TZS 1,500,000</td>
+                                <td>TZS 1,500,000</td>
+                            </tr>
+                            <tr>
+                                <td><img src="../assets/img/mc/mc4.jpg" alt="" class="mc-img"></td>
+                                <td>
+                                    <h5>
+                                        Mc Njozi
+                                    </h5>
+                                </td>
+                                <td>
+                                    <div class="booking-btns">
+                                        <button class="btn btn-gray btn-update" title="update"><i
+                                                class="fas fa-recycle"></i></button>
+                                        <button class="btn btn-danger btn-remove" title="remove"><i
+                                                class="fas fa-times-circle"></i></button>
+                                    </div>
+                                </td>
+                                <td>TZS 2,500,000</td>
+                                <td>TZS 2,500,000</td>
+                            </tr>
+                        </table>
+                        <!-- </div> -->
+                    </div>
+                </div>
+                <div class="row flex even-columns pt-0 pb-0 bookings-row-totals ">
+                    <div class="bookings-table-2 mt-2">
+                        <table>
+                            <tr id="t-header">
+                                <th id="moc">Sub Total</th>
+                                <th id="moc">VAT (18%)</th>
+                                <th id="moc">Total</th>
+                            </tr>
+                            <tr>
+                                <td>TZS 3,500,000</td>
+                                <td>TZS 3,500,000</td>
+                                <td>TZS 3,500,000</td>
+                            </tr>
+                            <tr>
+                                <td>TZS 1,500,000</td>
+                                <td>TZS 1,500,000</td>
+                                <td>TZS 1,500,000</td>
+                            </tr>
+                            <tr>
+                                <td>TZS 2,500,000</td>
+                                <td>TZS 2,500,000</td>
+                                <td>TZS 2,500,000</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+                <div class="row flex even-columns pt-0 pb-0 bookings-row-btns">
+                    <div class="booking-actions flex-space-between mt-2">
+                        <button class="btn btn-danger btn-remove">Continue Booking</button>
+                        <button class="btn btn-gray btn-update">CHECKOUT</button>
                     </div>
                 </div>
             </div>
