--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="assets/vendors/fontawesome-free-5.15.2-web/css/all.min.css">
     <!-- Font Awesome Online -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet" class="fonts-link">
     <!-- Main CSS -->
     <link rel="stylesheet" href="assets/css/index.css">
     <!-- Header-Footer CSS -->
